Fixed overlap on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -639,7 +639,7 @@ width:fit-content;
 @media (max-width: 479px) {
 
   .gbox-img-large {
-    width: 325px;
+    width: 250px;
   }
 
   .gbox-img {
